--- a/.gitignore
+++ b/.gitignore
@@ -264,3 +264,4 @@ fabric.properties
 .idea/**/azureSettings.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/webstorm,svelte,node
+.DS_Store
