--- a/package.json
+++ b/package.json
@@ -1,37 +1,38 @@
 {
-  "name": "template-vite-sveltekit-ts-tailwind",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "format": "biome format . --write"
-  },
-  "devDependencies": {
-    "@sveltejs/adapter-auto": "2.1.0",
-    "@sveltejs/kit": "1.22.1",
-    "autoprefixer": "10.4.14",
-    "mdsvex": "^0.11.0",
-    "postcss": "8.4.25",
-    "prettier": "2.8.8",
-    "prettier-plugin-svelte": "2.10.1",
-    "prettier-plugin-tailwindcss": "0.4.1",
-    "svelte": "4.0.5",
-    "svelte-check": "3.4.5",
-    "tailwindcss": "3.3.2",
-    "tslib": "2.6.0",
-    "typescript": "5.0.2",
-    "vite": "4.3.9"
-  },
-  "type": "module",
-  "dependencies": {
-    "@sveltejs/adapter-static": "^3.0.1",
-    "pixelarticons": "^1.8.1",
-    "rehype-autolink-headings": "^7.1.0",
-    "rehype-slug": "^6.0.0",
-    "svelte-sonner": "^0.3.22"
-  }
+	"name": "template-vite-sveltekit-ts-tailwind",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"format": "biome format . --write"
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^2.1.0",
+		"@sveltejs/kit": "^2.5.6",
+		"autoprefixer": "^10.4.14",
+		"mdsvex": "^0.11.0",
+		"postcss": "^8.4.25",
+		"prettier": "^2.8.8",
+		"prettier-plugin-svelte": "^2.10.1",
+		"prettier-plugin-tailwindcss": "^0.4.1",
+		"svelte": "^4.0.5",
+		"svelte-check": "^3.4.5",
+		"tailwindcss": "^3.3.2",
+		"tslib": "^2.6.0",
+		"typescript": "^5.0.2",
+		"vite": "^5.2.9"
+	},
+	"type": "module",
+	"dependencies": {
+		"@sveltejs/adapter-static": "^3.0.1",
+		"pixelarticons": "^1.8.1",
+		"rehype-autolink-headings": "^7.1.0",
+		"rehype-slug": "^6.0.0",
+		"svelte-sonner": "^0.3.22"
+	},
+	"trustedDependencies": ["svelte-preprocess"]
 }
