--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.2.0",
 		"@sveltejs/kit": "^2.5.6",
+		"@tailwindcss/typography": "^0.5.12",
 		"autoprefixer": "^10.4.14",
 		"mdsvex": "^0.11.0",
 		"postcss": "^8.4.25",
