--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
 		"prettier-plugin-tailwindcss": "^0.4.1",
+		"remark-math": "3.0.0",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.5",
 		"tailwindcss": "^3.3.2",
@@ -32,6 +33,7 @@
 		"@sveltejs/adapter-static": "^3.0.1",
 		"pixelarticons": "^1.8.1",
 		"rehype-autolink-headings": "^7.1.0",
+		"rehype-katex-svelte": "^1.2.0",
 		"rehype-slug": "^6.0.0",
 		"svelte-sonner": "^0.3.22"
 	},
