--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"rehype-autolink-headings": "^7.1.0",
 		"rehype-katex-svelte": "^1.2.0",
 		"rehype-slug": "^6.0.0",
+		"remark-hint": "^1.0.10",
 		"svelte-sonner": "^0.3.22"
 	},
 	"trustedDependencies": ["svelte-preprocess"]
