--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "autoprefixer": "^10.4.14",
     "mdsvex": "^0.11.0",
     "postcss": "^8.4.25",
-    "prettier": "^2.8.8",
-    "prettier-plugin-svelte": "^2.10.1",
-    "prettier-plugin-tailwindcss": "^0.4.1",
-    "remark-math": "3.0.0",
+    "prettier": "^3.0.0",
+    "prettier-plugin-svelte": "^3.0.9",
+    "prettier-plugin-tailwindcss": "^0.5.0",
+    "remark-math": "^3.0.0",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.5",
     "tailwindcss": "^3.3.2",
