--- a/package.json
+++ b/package.json
@@ -1,42 +1,42 @@
 {
-	"name": "template-vite-sveltekit-ts-tailwind",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"format": "biome format . --write"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.2.0",
-		"@sveltejs/kit": "^2.5.6",
-		"@tailwindcss/typography": "^0.5.12",
-		"autoprefixer": "^10.4.14",
-		"mdsvex": "^0.11.0",
-		"postcss": "^8.4.25",
-		"prettier": "^3.0.0",
-		"prettier-plugin-svelte": "^3.0.9",
-		"prettier-plugin-tailwindcss": "^0.5.0",
-		"remark-math": "^3.0.0",
-		"svelte": "^4.0.5",
-		"svelte-check": "^3.4.5",
-		"tailwindcss": "^3.3.2",
-		"tslib": "^2.6.0",
-		"typescript": "^5.0.2",
-		"vite": "^5.2.9"
-	},
-	"type": "module",
-	"dependencies": {
-		"@sveltejs/adapter-static": "^3.0.1",
-		"pixelarticons": "^1.8.1",
-		"rehype-autolink-headings": "^7.1.0",
-		"rehype-katex-svelte": "^1.2.0",
-		"rehype-slug": "^6.0.0",
-		"remark-hint": "^1.0.10",
-		"svelte-sonner": "^0.3.22"
-	},
-	"trustedDependencies": ["svelte-preprocess"]
+  "name": "template-vite-sveltekit-ts-tailwind",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "format": "biome format . --write"
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-auto": "^3.2.0",
+    "@sveltejs/kit": "^2.5.6",
+    "@tailwindcss/typography": "^0.5.12",
+    "autoprefixer": "^10.4.14",
+    "mdsvex": "^0.11.0",
+    "postcss": "^8.4.25",
+    "prettier": "^3.0.0",
+    "prettier-plugin-svelte": "^3.0.9",
+    "prettier-plugin-tailwindcss": "^0.5.0",
+    "remark-math": "^3.0.0",
+    "svelte": "^4.0.5",
+    "svelte-check": "^3.4.5",
+    "tailwindcss": "^3.3.2",
+    "tslib": "^2.6.0",
+    "typescript": "^5.0.2",
+    "vite": "^5.2.9"
+  },
+  "type": "module",
+  "dependencies": {
+    "@sveltejs/adapter-static": "^3.0.1",
+    "pixelarticons": "^1.8.1",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-katex-svelte": "^1.2.0",
+    "rehype-slug": "^6.0.0",
+    "remark-hint": "^1.0.10",
+    "svelte-sonner": "^0.3.22"
+  },
+  "trustedDependencies": ["@sveltejs/kit", "esbuild", "svelte-preprocess"]
 }
